# search_engine_api

./: Cargo.toml  Dockerfile  readme.md  schema.sql
src/: database.rs  lemmatise.rs  main.rs  ranking.rs  result_formatter.rs  timing.rs  token_cache.rs  turnstile.rs
