[package]
name = "search_engine_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
dotenv = "0.15.0"
regex = "1.10.5"
once_cell = "1.19.0"
url = "2.5.2"
tower-http = { version = "0.5.2", features = ["cors"] }
reqwest = { version = "0.12.5", features = ["json"] }
